pkgs/typed-racket-pkgs/typed-racket-test/tests/typed-racket/fail/tc-error-format.rkt
#;
(exn-pred #rx"expected: Nothing\n  given: '~s")
#lang typed/racket
(ann '~s Nothing)
